Ajout de la fonctionnalité de connexion WebSocket à Cider, mise à jour de l'interface utilisateur avec des styles CSS améliorés, et gestion des messages de statut. Suppression du fichier now_playing.txt et mise à jour de settings.json avec des valeurs par défaut. Amélioration de la logique de sauvegarde de la configuration et ajout de la validation des champs dans le formulaire.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cider-ws",
   "version": "1.0.0",
-  "main": "cider-ws.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
