--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,5 @@
   "port": 10767,
   "fileFormat": "text",
   "filePath": "C:\\Users\\Si2P\\Desktop\\now_playing.txt",
-  "fileTemplate": "{{ARTIST}} - {{SONG}}"
+  "fileTemplate": "{{ARTIST}} - {{SONG}} - {{ALBUM}} - {{COVER}}"
 }
