Modification de la fonction de sauvegarde pour remplacer %APPDATA% par le chemin réel et création du dossier si nécessaire. Mise à jour du chemin de fichier dans settings.json.

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "port": 10767,
   "fileFormat": "text",
-  "filePath": "C:\\Users\\Si2P\\Desktop\\now_playing.txt",
+  "filePath": "C:\\CiderWS\\now_playing.txt",
   "fileTemplate": "{{ARTIST}} - {{SONG}} - {{ALBUM}} - {{COVER}}"
 }
