Ajout de la gestion des états de lecture dans la fonction connectToCider, mise à jour de la logique de récupération des informations de la chanson, et ajout d'un nouveau fichier websocket-monitor.js pour la connexion WebSocket. Mise à jour des dépendances et modification de la configuration de build dans package.json.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder --win portable",
+    "build": "electron-builder --win nsis",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -26,7 +26,7 @@
       "output": "dist"
     },
     "win": {
-      "target": "portable",
+      "target": "nsis",
       "icon": "icon.png"
     }
   }
