--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,10 @@
   "port": 10767,
   "fileFormat": "text",
   "filePath": "C:\\CiderWS\\now_playing.txt",
-  "fileTemplate": "{{ARTIST}} - {{SONG}} - {{ALBUM}} - {{COVER}}"
+  "fileTemplate": "{{ARTIST}} - {{SONG}} - {{ALBUM}} - {{COVER}}",
+  "separateFiles": false,
+  "artistFilePath": "C:\\CiderWS\\artist.txt",
+  "songFilePath": "C:\\CiderWS\\song.txt",
+  "albumFilePath": "C:\\CiderWS\\album.txt",
+  "coverFilePath": "C:\\CiderWS\\cover.txt"
 }
