--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cider-ws",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cider-ws": "file:",
     "socket.io-client": "^4.8.1",
     "ws": "^8.18.1"
   },
