--- a/settings.json
+++ b/settings.json
@@ -1,11 +1,7 @@
 {
   "port": 10767,
   "fileFormat": "text",
-  "filePath": "C:\\CiderWS\\now_playing.txt",
-  "fileTemplate": "{{ARTIST}} - {{SONG}} - {{ALBUM}} - {{COVER}}",
   "separateFiles": false,
-  "artistFilePath": "C:\\CiderWS\\artist.txt",
-  "songFilePath": "C:\\CiderWS\\song.txt",
-  "albumFilePath": "C:\\CiderWS\\album.txt",
-  "coverFilePath": "C:\\CiderWS\\cover.txt"
+  "filePath": "C:\\CiderWS\\now_playing.txt",
+  "fileTemplate": "{{ARTIST}} - {{SONG}}"
 }
