Mise à jour de la logique de gestion de la configuration dans main.js pour migrer les paramètres vers une nouvelle version, modification des chemins de configuration pour utiliser APPDATA, et ajout de la création automatique du dossier de configuration si nécessaire. Mise à jour de la version à 1.1.2 dans package.json.

--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,9 @@
   "fileFormat": "text",
   "separateFiles": false,
   "filePath": "C:\\CiderWS\\now_playing.txt",
-  "fileTemplate": "{{ARTIST}} - {{SONG}}"
+  "fileTemplate": "{{ARTIST}} - {{SONG}}",
+  "artistFilePath": "C:\\CiderWS\\artist.txt",
+  "songFilePath": "C:\\CiderWS\\song.txt",
+  "albumFilePath": "C:\\CiderWS\\album.txt",
+  "coverFilePath": "C:\\CiderWS\\cover.txt"
 }
