Ajout de la gestion du format de cover dans l'interface utilisateur et la logique de sauvegarde. Les utilisateurs peuvent désormais choisir entre sauvegarder la cover en tant que fichier texte ou image JPG. Mise à jour de la version à 1.2.0 dans package.json et package-lock.json.

--- a/settings.json
+++ b/settings.json
@@ -7,5 +7,6 @@
   "artistFilePath": "C:\\CiderWS\\artist.txt",
   "songFilePath": "C:\\CiderWS\\song.txt",
   "albumFilePath": "C:\\CiderWS\\album.txt",
-  "coverFilePath": "C:\\CiderWS\\cover.txt"
+  "coverFilePath": "C:\\CiderWS\\cover.txt",
+  "coverFormat": "text"
 }
